feat: add EAILAB website link to logo

--- a/index.html
+++ b/index.html
@@ -570,9 +570,12 @@
     <main class="container" id="top">
         <!-- Logo -->
         <div class="logo">
-            <img src="https://github.com/EAILAB-IFSP/Home/blob/Home/Logo_Dourado.jpg?raw=true"
-                 alt="EAILAB IFSP Laboratory Logo"
-                 loading="eager">
+            <a href="https://eailab.labmax.org/" target="_blank" rel="noopener noreferrer" title="Visit EAILAB official website">
+                <img src="https://github.com/EAILAB-IFSP/Home/blob/Home/Logo_Dourado.jpg?raw=true"
+                     alt="EAILAB IFSP Laboratory Logo"
+                     loading="eager"
+                     style="cursor: pointer;">
+            </a>
         </div>
 
         <!-- Title -->
