--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Paraconsistent Library - Python LPA2v Implementation">
     <meta property="og:description" content="Python Library designed to help users apply paraconsistent annotated evidential logic. Zero dependencies, type-safe implementation.">
-    <meta property="og:image" content="https://github.com/EAILAB-IFSP/Home/blob/Home/Logo_Dourado.jpg?raw=true">
-
+    <meta property="og:image" content="https://github.com/EAILAB-IFSP/Home/blob/Home/Logo_Dourado.jpg?raw=tr">
+<img src="jpg7.jpg" loading="lazy">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Paraconsistent Library - Python LPA2v Implementation">
@@ -1073,3 +1073,4 @@ print(f"Result of the PAL2v Analysis = {NAP3.complete.muER:.3f}")</code></pre>
     </script>
 </body>
 </html>
+
