--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
         <!-- Logo -->
         <div class="logo">
             <a href="https://eailab.labmax.org/" target="_blank" rel="noopener noreferrer" title="Visit EAILAB official website">
-                <img src="https://github.com/EAILAB-IFSP/Home/blob/Home/Logo_Dourado.jpg?raw=true"
+                <img src="jpg7.jpg"
                      alt="EAILAB IFSP Laboratory Logo"
                      loading="eager"
                      style="cursor: pointer;">
