--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Paraconsistent Library - Python LPA2v Implementation">
     <meta property="og:description" content="Python Library designed to help users apply paraconsistent annotated evidential logic. Zero dependencies, type-safe implementation.">
-    <meta property="og:image" content="jpg7.jpeg">
+    <meta property="og:image" content="logo1.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -571,7 +571,7 @@
         <!-- Logo -->
         <div class="logo">
             <a href="https://eailab.labmax.org/" target="_blank" rel="noopener noreferrer" title="Visit EAILAB official website">
-                <img src="jpg7.jpeg"
+                <img src="logo1.jpg"
                      alt="EAILAB IFSP Laboratory Logo"
                      loading="eager"
                      style="cursor: pointer;">
@@ -1073,4 +1073,5 @@ print(f"Result of the PAL2v Analysis = {NAP3.complete.muER:.3f}")</code></pre>
     </script>
 </body>
 </html>
+
 
