--- a/index.html
+++ b/index.html
@@ -884,26 +884,26 @@ block.set_params(FtC=0.7)</code></pre>
 from paraconsistent import ParaconsistentBlock
 
 # 1) Create the blocks
- PAN-Paraconsistent Analysis Node1 = ParaconsistentBlock()
- PAN-Paraconsistent Analysis Node2 = ParaconsistentBlock()
- PAN-Paraconsistent Analysis Node3 = ParaconsistentBlock()
+ PANNode1 = ParaconsistentBlock()
+ PANNode2 = ParaconsistentBlock()
+ PANNode3 = ParaconsistentBlock()
 
 # 2) Adjust the Certainty Factor parameter (affects the geometry of the 12 paraconsistent logical states)
 # Reference value: 0.5
- PAN-Paraconsistent Analysis Node1.config.FtC = 0.5
- PAN-Paraconsistent Analysis Node2.config.FtC = 0.5
+ PANNode1.config.FtC = 0.5
+ PANNode2.config.FtC = 0.5
  PAN-Paraconsistent Analysis Node3.config.FtC = 0.5
 
 # 3) Define the mu and lambda
- PAN-Paraconsistent Analysis Node1.input.mu = 0.45
- PAN-Paraconsistent Analysis Node1.input.lam = 0.76
- PAN-Paraconsistent Analysis Node2.input.mu = 1.00
- PAN-Paraconsistent Analysis Node2.input.lam = 0.40
- PAN-Paraconsistent Analysis Node3.input.mu =  PAN-Paraconsistent Analysis Node1.complete.muER
- PAN-Paraconsistent Analysis Node3.input.lam = 1 -  PANNode2.complete.muER
+ PANNode1.input.mu = 0.45
+ PANNode1.input.lam = 0.76
+ PANNode2.input.mu = 1.00
+ PANNode2.input.lam = 0.40
+ PANNode3.input.mu =  PANNode1.complete.muER
+ PANNode3.input.lam = 1 -  PANNode2.complete.muER
 
 # Output of the Paraconsistent Analysis Network
-print(f"Result of the PAL2v Analysis = { PAN-Paraconsistent Analysis Node3.complete.muER:.3f}")</code></pre>
+print(f"Result of the PAL2v Analysis = { PANNode3.complete.muER:.3f}")</code></pre>
 
             <h3>More examples:</h3>
             <ul>
@@ -1073,6 +1073,7 @@ print(f"Result of the PAL2v Analysis = { PAN-Paraconsistent Analysis Node3.compl
     </script>
 </body>
 </html>
+
 
 
 
