--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@ from paraconsistent import ParaconsistentBlock
 # Reference value: 0.5
  PANNode1.config.FtC = 0.5
  PANNode2.config.FtC = 0.5
- PAN-Paraconsistent Analysis Node3.config.FtC = 0.5
+ PANNode3.config.FtC = 0.5
 
 # 3) Define the mu and lambda
  PANNode1.input.mu = 0.45
@@ -1073,6 +1073,7 @@ print(f"Result of the PAL2v Analysis = { PANNode3.complete.muER:.3f}")</code></p
     </script>
 </body>
 </html>
+
 
 
 
